# access_control_template

./: .gitignore  CMakeLists.txt  README.md  get_started.md  install_dependencies.sh  rebuild.bash  rebuild.sh  start_access_control.sh
include/: actions.hpp  communication.hpp  enums.hpp  helpers.hpp  ui_messaging.hpp
src/: access_control.ddl  access_control.ruleset  actions.cpp  communication.cpp  helpers.cpp  main.cpp  ui_messaging.cpp
ui/: start_simulator.sh
ui/static/css/: style.css
ui/static/js/: main.js
ui/templates/: index.html
